src/test/ui/traits/reservation-impl/no-use.stderr
error[E0277]: the trait bound `(): MyTrait` is not satisfied
  --> $DIR/no-use.rs:10:26
   |
LL |     <() as MyTrait>::foo(&());
   |     -------------------- ^^^ the trait `MyTrait` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <() as MyTrait>
note: required by `MyTrait::foo`
  --> $DIR/no-use.rs:5:17
   |
LL | trait MyTrait { fn foo(&self); }
   |                 ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
